--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ table {
     border-radius: 10px;
     width: 200px;
     height: 250px;
+    cursor: pointer;
 }
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
